#styles: Fix CSS on iOS18

--- a/src/index.css
+++ b/src/index.css
@@ -37,18 +37,6 @@ h6 {
 }
 
 :root {
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: var(--color-text-default);
-  background-color: var(--color-bg-1);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
   --color-bg-base: #121212;
 
   --size-border: 5px;
@@ -61,7 +49,20 @@ h6 {
   --color-bg-1: #242424;
   --color-bg-2: #323232;
   --color-bg-3: #404040;
-  --color-bg-textarea: #242424;
+  --color-bg-textarea: #242424;  line-height: 1.5;
+}
+
+body {
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: var(--color-text-default);
+  background-color: var(--color-bg-1);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .jetbrains-mono-body {
